--- a/style.css
+++ b/style.css
@@ -76,15 +76,19 @@ section {
     flex-wrap: wrap;
     justify-content: flex-start;
     gap: 20px;
+    position: relative;
 }
 
 legend {
-    padding: 10px 0 50px 50px;
+    padding: 10px 0 20px 50px;
     font-size: 1.5rem;
 }
 
 .right {
     background-color: rgb(245, 247, 248);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 input {
@@ -129,10 +133,35 @@ button {
     color: red;
 }
 
-input[type = "email"]:invalid {
-    border: 1px red solid;
+.validation:valid {
+border-color: hsl(120, 76%, 50%);
+}
+
+
+
+input[type = "email"]:not(:placeholder-shown):invalid {
+    border-color: hsl(0, 76%, 50%);;
+}
+
+input[type = "tel"]:not(:placeholder-shown):valid {
+    border-color: hsl(120, 76%, 50%);
+}
+
+input[type = "tel"]:placeholder-shown:valid {
+    border: 1px solid rgb(216, 213, 213);
 }
 
 input[type = "tel"]:invalid {
-    border: 1px red solid;
+    border-color: hsl(0, 76%, 50%);
+}
+
+.pass:not(:placeholder-shown):invalid {
+    border-color: hsl(0, 76%, 50%);
+}
+
+#message {
+    color: red;
+    position: absolute;
+    margin-top: 5px;
+    font-size: 0.8rem;
 }
